option java_outer_classname = "LCMultiMediaParameter";
option java_package = "com.navinfo.opentsp.platform.location.protocol.terminal.setting.parameter";


message MultiMediaParameter{
	optional	int32	pictureQuality		=1;
	optional	int32	brightness			=2;
	optional	int32	contrast			=3;
	optional	int32	saturation			=4;
	optional	int32	chroma				=5;
}
